--- a/src/gui/EditorWindow/EditorWindow.axaml
+++ b/src/gui/EditorWindow/EditorWindow.axaml
@@ -13,27 +13,33 @@
 
   <DockPanel>
     <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Right">
-    <Menu>
-      <MenuItem Header="Save" IsEnabled="{Binding !Config.ReadOnly}">
-        <MenuItem Header="Save all" Click="SaveMod" />
-        <MenuItem Header="Save EVT" Click="SaveMod" Name="EVT" />
-        <MenuItem Header="Save ECS" Click="SaveMod" Name="ECS" />
-        <MenuItem Header="Save BMD" Click="SaveMod" Name="BMD" />
-        <MenuItem Header="Save BF"  Click="SaveMod" Name="BF" />
-      </MenuItem>
-      <MenuItem Header="Reload">
-        <MenuItem Header="Reload all" />
-        <MenuItem Header="Reload EVT" />
-        <MenuItem Header="Reload ECS" />
-      </MenuItem>
-    </Menu>
-    <Button Click="ToggleTheme">
-      <PathIcon Data="{StaticResource dark_theme_regular}" />
-    </Button>
+      <Menu>
+        <MenuItem Header="Save" IsEnabled="{Binding !Config.ReadOnly}">
+          <MenuItem Header="Save all" Click="SaveMod" />
+          <MenuItem Header="Save EVT" Click="SaveMod" Name="EVT" />
+          <MenuItem Header="Save ECS" Click="SaveMod" Name="ECS" />
+          <MenuItem Header="Save BMD" Click="SaveMod" Name="BMD" />
+          <MenuItem Header="Save BF"  Click="SaveMod" Name="BF" />
+        </MenuItem>
+        <MenuItem Header="Reload">
+          <MenuItem Header="Reload all" />
+          <MenuItem Header="Reload EVT" />
+          <MenuItem Header="Reload ECS" />
+        </MenuItem>
+      </Menu>
+      <Button Click="ToggleTheme">
+        <PathIcon Data="{StaticResource dark_theme_regular}" />
+      </Button>
     </StackPanel>
     <TabControl Margin="5" DockPanel.Dock="Bottom">
       <TabItem Header="Editors">
         <TabControl Margin="5">
+          <TabItem Header="Basics">
+            <views:BasicsPanel DataContext="{Binding basicsPanelVM}" Padding="10"/>
+          </TabItem>
+          <TabItem Header="Assets">
+            <views:AssetsPanel DataContext="{Binding assetsPanelVM}" Padding="10"/>
+          </TabItem>
           <TabItem Header="Timeline">
             <views:TimelinePanel DataContext="{Binding timelinePanelVM}" Padding="10"/>
           </TabItem>
