Basics editor tab corrections & completeness

--- a/src/gui/EditorWindow/AssetsPanel/AssetsPanel.axaml
+++ b/src/gui/EditorWindow/AssetsPanel/AssetsPanel.axaml
@@ -166,6 +166,7 @@
         <TextBox
           AcceptsReturn="true"
           Text="{Binding Text}"
+          MaxLength="{Binding MaxLength}"
           IsEnabled="{Binding Editable}"/>
       </StackPanel>
     </DataTemplate>
