--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -182,6 +182,7 @@
         <TextBox
           AcceptsReturn="true"
           Text="{Binding Text}"
+          MaxLength="{Binding MaxLength}"
           IsEnabled="{Binding Editable}"/>
       </StackPanel>
     </DataTemplate>
