--- a/src/gui/EditorWindow/BasicsPanel/BasicsPanel.axaml
+++ b/src/gui/EditorWindow/BasicsPanel/BasicsPanel.axaml
@@ -63,7 +63,7 @@
     </Style>
     <Style Selector="StackPanel.form">
       <Setter Property="Orientation" Value="Vertical"/>
-      <Setter Property="Margin" Value="5"/>
+      <Setter Property="Margin" Value="20"/>
       <Setter Property="Spacing" Value="10"/>
     </Style>
     <Style Selector="TextBlock.formtitle">
@@ -161,6 +161,7 @@
         <TextBox
           AcceptsReturn="true"
           Text="{Binding Text}"
+          MaxLength="{Binding MaxLength}"
           IsEnabled="{Binding Editable}"/>
       </StackPanel>
     </DataTemplate>
@@ -188,50 +189,42 @@
 
   </UserControl.DataTemplates>
 
-  <DockPanel>
-    <Button
-     Background="{DynamicResource SystemAccentColor}"
-     DockPanel.Dock="Bottom"
-     FontSize="18"
-     HorizontalAlignment="Center"
-     IsEnabled="{Binding Editable}">
-       Apply Changes
-    </Button>
-    <ScrollViewer DockPanel.Dock="Top">
-      <StackPanel Classes="form">
+  <ScrollViewer>
+    <StackPanel Classes="form">
 
-        <TextBlock Classes="formtitle" Text="Labels"/>
-        <Separator Classes="formtitle"/>
-        <ContentControl Content="{Binding MajorID}"/>
-        <ContentControl Content="{Binding MinorID}"/>
-        <ContentControl Content="{Binding Rank}"/>
-        <ContentControl Content="{Binding Level}"/>
+      <TextBlock Classes="formtitle" Text="Labels"/>
+      <Separator Classes="formtitle"/>
+      <ContentControl Content="{Binding MajorID}"/>
+      <ContentControl Content="{Binding MinorID}"/>
+      <ContentControl Content="{Binding Rank}"/>
+      <ContentControl Content="{Binding Level}"/>
 
-        <TextBlock Classes="formtitle" Text="Scripts"/>
-        <Separator Classes="formtitle"/>
-        <ContentControl Content="{Binding EmbedBMD}"/>
-        <ContentControl Content="{Binding EmbedBF}"/>
-        <ContentControl Content="{Binding InitScriptEnabled}"/>
-        <ContentControl Content="{Binding InitScriptIndex}"/>
+      <TextBlock Classes="formtitle" Text="Scripts"/>
+      <Separator Classes="formtitle"/>
+      <ContentControl Content="{Binding EmbedBMD}"/>
+      <ContentControl Content="{Binding BMDPath}" IsVisible="{Binding EmbedBMD.Value}"/>
+      <ContentControl Content="{Binding EmbedBF}"/>
+      <ContentControl Content="{Binding BFPath}" IsVisible="{Binding EmbedBF.Value}"/>
+      <ContentControl Content="{Binding InitScriptEnabled}"/>
+      <ContentControl Content="{Binding InitScriptIndex}" IsVisible="{Binding InitScriptEnabled.Value}"/>
 
-        <TextBlock Classes="formtitle" Text="Cinemascope"/>
-        <Separator Classes="formtitle"/>
-        <ContentControl Content="{Binding CinemascopeEnabled}"/>
-        <ContentControl Content="{Binding CinemascopeAnimationEnabled}"/>
-        <ContentControl Content="{Binding CinemascopeStartingFrame}"/>
+      <TextBlock Classes="formtitle" Text="Cinemascope"/>
+      <Separator Classes="formtitle"/>
+      <ContentControl Content="{Binding CinemascopeEnabled}"/>
+      <ContentControl Content="{Binding CinemascopeAnimationEnabled}" IsVisible="{Binding CinemascopeEnabled.Value}"/>
+      <ContentControl Content="{Binding CinemascopeStartingFrame}" IsVisible="{Binding CinemascopeEnabled.Value}"/>
 
-        <TextBlock Classes="formtitle" Text="ENV"/>
-        <Separator Classes="formtitle"/>
-        <ContentControl Content="{Binding InitEnvAssetID}"/>
-        <ContentControl Content="{Binding DebugEnvAssetID}"/>
+      <TextBlock Classes="formtitle" Text="ENV"/>
+      <Separator Classes="formtitle"/>
+      <ContentControl Content="{Binding InitEnvAssetID}"/>
+      <ContentControl Content="{Binding DebugEnvAssetID}"/>
 
-        <TextBlock Classes="formtitle" Text="Other Flags"/>
-        <Separator Classes="formtitle"/>
-        <ContentControl Content="{Binding UnkFlag1}"/>
-        <ContentControl Content="{Binding UnkFlag2}"/>
+      <TextBlock Classes="formtitle" Text="Other Flags"/>
+      <Separator Classes="formtitle"/>
+      <ContentControl Content="{Binding UnkFlag1}"/>
+      <ContentControl Content="{Binding UnkFlag2}"/>
 
-      </StackPanel>
-    </ScrollViewer>
-  </DockPanel>
+    </StackPanel>
+  </ScrollViewer>
 
 </rxui:ReactiveUserControl>
