--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -945,7 +945,39 @@
         </Button>
         <Button Click="HideAllCategories" CornerRadius="0,5,5,0">Hide All</Button>
       </StackPanel>
+        <Button Classes="accented" ToolTip.Tip="Event Basics">
+          <Button.Flyout>
+            <Flyout>
+              <StackPanel Classes="form">
+	            <TextBlock Classes="formtitle" Text="Event Basics"/>
+                <Separator Classes="formtitle"/>
+                <ContentControl Content="{Binding FrameRate}"/>
+                <ContentControl Content="{Binding FrameDuration}"/>
+                <Expander Header="In-Editor Playback">
+                  <StackPanel Classes="form">
+                    <ContentControl Content="{Binding StartingFrameEnabled}"/>
+                    <ContentControl Content="{Binding StartingFrameEntry}" IsVisible="{Binding StartingFrameEnabled.Value}"/>
+                  </StackPanel>
+                </Expander>
+              </StackPanel>
+            </Flyout>
+          </Button.Flyout>
+          <PathIcon Data="{StaticResource more_regular}" />
+        </Button>
       <StackPanel Classes="field" DockPanel.Dock="Right">
+        <Slider
+         Minimum="0"
+         Maximum="{c:Binding FrameCount-1}"
+         TickFrequency="1" IsSnapToTickEnabled="true"
+         Value="{Binding ActiveFrame}"
+         Width="200"/>
+        <NumericUpDown ValueChanged="JumpToFrame"
+         Minimum="0"
+         Maximum="{c:Binding FrameCount-1}"
+         Increment="1"
+         Value="{Binding ActiveFrame}"
+         AllowSpin="true"
+         VerticalAlignment="Center"/>
         <Button ToolTip.Tip="Frame Settings">
           <Button.Flyout>
             <Flyout>
@@ -965,19 +997,6 @@
           </Button.Flyout>
           <PathIcon Data="{StaticResource settings_regular}" />
         </Button>
-        <Slider
-         Minimum="0"
-         Maximum="{c:Binding FrameCount-1}"
-         TickFrequency="1" IsSnapToTickEnabled="true"
-         Value="{Binding ActiveFrame}"
-         Width="200"/>
-        <NumericUpDown ValueChanged="JumpToFrame"
-         Minimum="0"
-         Maximum="{c:Binding FrameCount-1}"
-         Increment="1"
-         Value="{Binding ActiveFrame}"
-         AllowSpin="true"
-         VerticalAlignment="Center"/>
       </StackPanel>
     </DockPanel>
     <Grid>
